balancer use wrong chunk size for jumbo chunks

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.4, 6.2.0-rc0
    • Affects Version/s: 6.0.3, 6.1.0-rc4
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0
    • Sharding EMEA 2022-10-31, Sharding EMEA 2022-11-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      To evaluate if a chunk is jumbo the balancer uses only the global chunk size configured setting, ignoring the collection specific chunk size setting if set.

            Assignee:
            Silvia Surroca
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: