SERVER-70768 Balancer use wrong chunk size for jumbo chunks